--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "plantilla",
+  "name": "ami-chat",
   "version": "1.0.0",
-  "description": "",
+  "description": "Chat app using web sockets",
   "main": "index.js",
   "scripts": {
     "test": "npx jest",
     "prettier-format": "npx prettier --config .prettierrc 'src/**/*.ts' --write",
     "dev:watcher": "npx nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "dev:run": "npx ts-node src/index.ts",
+    "dev": "npx ts-node src/server/index.ts",
     "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.5.6",
-    "@types/node": "^20.8.9",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.3",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@types/morgan": "1.9.9",
+    "@types/express": "4.17.20",
+    "@types/jest": "29.5.6",
+    "@types/node": "20.8.9",
+    "@typescript-eslint/eslint-plugin": "6.9.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-prettier": "5.0.1",
+    "jest": "29.7.0",
+    "nodemon": "3.0.1",
+    "prettier": "3.0.3",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
+    "typescript": "5.2.2"
+  },
+  "dependencies": {
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "morgan": "1.10.0"
   }
 }
