--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/morgan": "1.9.9",
     "@types/express": "4.17.20",
     "@types/jest": "29.5.6",
+    "@types/morgan": "1.9.9",
     "@types/node": "20.8.9",
     "@typescript-eslint/eslint-plugin": "6.9.0",
     "eslint-config-prettier": "9.0.0",
@@ -31,6 +31,7 @@
   "dependencies": {
     "dotenv": "16.3.1",
     "express": "4.18.2",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "socket.io": "4.7.2"
   }
 }
