--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "29.5.6",
     "@types/morgan": "1.9.9",
     "@types/node": "20.8.9",
+    "@types/socket.io": "3.0.2",
     "@typescript-eslint/eslint-plugin": "6.9.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.1",
@@ -29,6 +30,7 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
+    "@libsql/client": "0.3.6",
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "morgan": "1.10.0",
