--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "npx jest",
     "prettier-format": "npx prettier --config .prettierrc 'src/**/*.ts' --write",
     "dev:watcher": "npx nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "dev": "npx ts-node src/server/index.ts",
+    "dev": "npx ts-node src/infrastructure/server/index.ts",
     "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "8.2.0",
     "@types/express": "4.17.20",
     "@types/jest": "29.5.6",
     "@types/morgan": "1.9.9",
