--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "20.8.9",
     "@types/socket.io": "3.0.2",
     "@typescript-eslint/eslint-plugin": "6.9.0",
+    "drizzle-kit": "^0.20.4",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.1",
     "jest": "29.7.0",
@@ -31,8 +32,11 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "@libsql/client": "0.3.6",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@libsql/client": "^0.3.6",
+    "@rollup/plugin-inject": "^5.0.5",
     "dotenv": "16.3.1",
+    "drizzle-orm": "^0.29.0",
     "express": "4.18.2",
     "morgan": "1.10.0",
     "socket.io": "4.7.2"
